--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -855,9 +855,11 @@ img {
 .skills__php {
     width: 80%;
 }
-
+.skills__java{
+    width:85%;
+}
 .skills__python {
-    width: 50%;
+    width: 40%;
 }
 
 .skills__mysql {
